LPS-41170 - Limit tag name size to 75 chars and fix overflow styling

--- a/portal-web/docroot/html/themes/_styled/css/application.css
+++ b/portal-web/docroot/html/themes/_styled/css/application.css
@@ -109,6 +109,10 @@
 		}
 	}
 
+	.textboxlistentry-content{
+		word-break: break-all;
+	}
+
 	.textboxlistentry-remove {
 		padding: 0 3px 1px;
 	}
